k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relay-clone
  labels:
    name: relay-clone
    app: relay-clone
